=== 0.1.4 2012-01-20

* fixed issue #54 - Identifiers of operation status have become to match their display names

=== 0.1.3 2011-11-07

* fixed issue #27 - Made it sure that a basket would be deleted even if it happens right after its creation.
* fixed issue #33 - Refactored a replication entry management system in the crepd.

=== 0.1.2 2011-10-04

* fixed issue #25 - Errno::EINVAL upon setsockopt(.., Socket::SO_RCVTIMEO, ..)
* fixed issue #26 - [BUG] thread_free: locking_mutex must be NULL ...

=== 0.1.1 2011-05-31

* The set description related to a specific environment is excluded.

=== 0.1.0 2011-03-28

* version renumbering.
** based on castoro-peer 0.0.18
* config key names were united.
** from "ReplicationTransmissionDataSize"
** to   "ReplicationTransmissionDataUnitSize"

=== 0.0.21 2010-12-21

* fixed issue #13 - peerctl stat command did not work.

=== 0.0.20 2010-11-18

* refactored configurations files.
** it integrated it into peer.conf
** it made it to the YAML format.
** attribute name was made a snakecase.
* changed shebang. /usr/bin/env ruby
* added version.rb
* refactored extconf.rb
** The difference of the platform is absorbed.

=== 0.0.19

* refactoring and added spec for IfConfig, StorageSpaceMonitor and others.
* changed peer.conf structure.
** removed CgetdXXX.
** added PeerGroupsFile attribute
** removed StorageGroupsXX, StorageHostsXX.
* Integration of configuration files
** peer_groups.conf
** removed storage_groups.json, storage_hosts.yaml

=== 0.0.18 2010-10-13

* bugfix: Defect of method of acquiring free space (KByte->Byte)

=== 0.0.17 2010-09-21

* Corrected a typo Log.warn with Log.warning
* Refactored: manipulator.rb manipulator_impl.rb cpeerd_workers.rb
* Added, removed, and revised some specs.

=== 0.0.16 2010-09-14

* peerctl version 0.0.6 additionally supporting gc, gc_profiler, inspect, version commands
* Deleted three entries, DatabaseName, DatabaseUser, and DatabasePassword, from configurations.rb